MDUserManager: respect policy-controlled toggles for adding a profile and browsing as guest

BUG=626011

Review-Url: https://codereview.chromium.org/2128093002
Cr-Commit-Position: refs/heads/master@{#404036}

Former-commit-id: 362c105506b937a121c84024d886adfaca9869ba